fix(m-virtual-displays): Update z-index

--- a/src/styles/theme/components/m-virtual-displays/m-virtual-displays.scss
+++ b/src/styles/theme/components/m-virtual-displays/m-virtual-displays.scss
@@ -106,12 +106,15 @@
       }
     }
 
+    .el-card {
+      z-index: 1;
+      position: relative;
+    }
+
     .card-expansion {
       @extend .pt-6;
       @extend .pb-4;
       @extend .px-5;
-      z-index: -1;
-      position: relative;
       transform: translateY(-1rem);
       background-color: $--color-white;
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
